--- a/package.json
+++ b/package.json
@@ -5,19 +5,25 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "server:dev":"nodemon server.js",
+    "server:prod":"node server.js",
     "preview": "vite preview"
   },
   "dependencies": {
     "codemirror": "^5.65.2",
+    "express": "^4.17.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
     "react-router-dom": "^6.2.2",
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.4",
+    "nodemon": "^2.0.15",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23",
     "vite": "^2.8.0"
