--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "server:dev":"nodemon server.js",
-    "server:prod":"node server.js",
+    "server:dev": "nodemon server.js",
+    "server:prod": "node server.js",
     "preview": "vite preview"
   },
   "dependencies": {
     "codemirror": "^5.65.2",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
     "react-router-dom": "^6.2.2",
+    "sass": "^1.49.9",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
     "uuid": "^8.3.2"
